# CS4065_Project2

./: .gitignore  README.md  flake.nix
Client/: README.md  hi  pyproject.toml
Client/client/: __init__.py  __main__.py  cli.py  client.py  events.md  gui.py  tui.css  tui.py
Client/src/: __main__.py  client.py  gui.py
Protocol/: CMakeLists.txt  Config.cmake.in  README.md  pyproject.toml
Protocol/include/: spam_api.hpp
Protocol/nix/: pyspam.nix
Protocol/pyspam/: CMakeLists.txt  __init__.py  pyproject.toml  pyspam.cpp
Protocol/python/: CMakeLists.txt  pyspam.cpp
Protocol/src/: spam_api.cpp
Server/: CMakeLists.txt  README.md
Server/include/: board_server.hpp  easy_winsock.hpp
Server/src/: board_server.cpp  easy_winsock.cpp
nix/: pyspam.nix
